<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    tools:context=".Menu3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgItem1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks1" />

                <ImageButton
                    android:id="@+id/imgItem2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks2" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMenu1"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu1"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtMenu2"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu2"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgItem3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text ="Hot Tea"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks3" />

                <ImageButton
                    android:id="@+id/imgItem4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks4" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMenu3"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu3"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtMenu4"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu4"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgItem5"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks5" />

                <ImageButton
                    android:id="@+id/imgItem6"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks6" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMenu5"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu5"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtMenu6"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu6"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgItem7"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks7" />

                <ImageButton
                    android:id="@+id/imgItem8"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks8" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMenu7"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu7"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtMenu8"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu8"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgItem9"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks9" />

                <ImageButton
                    android:id="@+id/imgItem10"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnborder"
                    android:layout_height="wrap_content"
                    android:scaleType="fitXY"
                    android:src="@drawable/drinks10" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtMenu9"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu9"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/txtMenu10"
                    android:background="@color/white"
                    android:textColor="@color/black"
                    android:text="@string/Drinks_Menu10"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>